--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 h1 {
-  font-family: "Karla";
+  font-family: "Karla", sans-serif;
   font-size: 40px;
   font-weight: 800;
   line-height: 40px;
@@ -21,13 +21,13 @@ h1 {
 }
 
 h2 {
-  font-family: "Inter";
+  font-family: "Inter", sans-serif;
   font-size: 20px;
   font-weight: 400;
 }
 
 p {
-  font-family: "Inter";
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   font-weight: 500;
 }
@@ -43,6 +43,7 @@ p {
   height: 550px;
   padding: 115px 52px;
   background-color: var(--blueDrk);
+  border-radius: 6px;
   margin: 40px auto;
 }
 
@@ -66,10 +67,18 @@ button {
   font-weight: 400;
 }
 
+.passwordField {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+}
 input {
   border-style: none;
   background-color: var(--blueMd);
   color: white;
-  width: 211px;
+  width: 50%;
   height: 39px;
+  border-radius: 6px;
 }
