--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ p {
 .container {
   max-width: 550px;
   border-radius: 6px;
+  border: 1px solid blue;
   background-color: aliceblue;
   margin: 16px auto;
   padding: 105px 56px;
